--- a/views/firstPage.html
+++ b/views/firstPage.html
@@ -7,9 +7,9 @@
   <title>Pandemic Response - Dashboard</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="/firstPage.css" />
-  <link rel="stylesheet" href="/sidebar.css" />
-  <link rel="stylesheet" href="/weather.css">
+  <link rel="stylesheet" href="firstPage.css" />
+  <link rel="stylesheet" href="sidebar.css" />
+  <link rel="stylesheet" href="weather.css">
 </head>
 
 <body>
@@ -360,9 +360,9 @@
 
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="https://unpkg.com/scrollreveal"></script>
-  <script src="/sidebar.js"></script>
-  <script src="/firstPage.js"></script>
-  <script src="/weather.js"></script>
+  <script src="sidebar.js"></script>
+  <script src="firstPage.js"></script>
+  <script src="weather.js"></script>
 </body>
 
 </html>
