--- a/views/home.html
+++ b/views/home.html
@@ -574,7 +574,7 @@
             </div>
           </div>
           <div class="hero-image">
-            <img src="new2.jpg" alt="COVID-19 Response Team" />
+            <img src="../public/new2.jpg" alt="COVID-19 Response Team" />
           </div>
         </div>
       </div>
