--- a/views/log-in.html
+++ b/views/log-in.html
@@ -341,7 +341,7 @@
             />
             <img
               id="toggle-login-password"
-              src="show-password.png"
+              src="/images/show-password.png"
               alt="Show Password"
               class="toggle-password"
             />
@@ -428,7 +428,7 @@
             />
             <img
               id="toggle-confirm-password"
-              src="show-password.png"
+              src="/images/show-password.png"
               alt="Show Password"
               class="toggle-password"
             />
@@ -515,8 +515,8 @@
           "toggle-login-password"
         );
         const loginPasswordInput = document.getElementById("login-password");
-        const showPasswordIcon = "show-password.png";
-        const hidePasswordIcon = "hide-password.png";
+        const showPasswordIcon = "/images/show-password.png";
+        const hidePasswordIcon = "/images/hide-password.png";
 
         function togglePasswordVisibility(input, toggleIcon) {
           if (input.type === "password") {
