--- a/views/sign-up.html
+++ b/views/sign-up.html
@@ -384,7 +384,7 @@
             />
             <img
               id="toggle-signup-password"
-              src="show-password.png"
+              src="/images/show-password.png"
               alt="Show Password"
               class="toggle-password"
             />
@@ -495,8 +495,8 @@
           "toggle-signup-password"
         );
         const signupPasswordInput = document.getElementById("signup-password");
-        const showPasswordIcon = "show-password.png";
-        const hidePasswordIcon = "hide-password.png";
+        const showPasswordIcon = "/images/show-password.png";
+        const hidePasswordIcon = "/images/hide-password.png";
 
         function togglePasswordVisibility(input, toggleIcon) {
           if (input.type === "password") {
