--- a/views/home.html
+++ b/views/home.html
@@ -9,6 +9,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     />
+    <link rel="shortcut icon" href="/images/logo.png" type="image/x-icon">
     <style>
       /* Reset and Base Styles */
       * {
