--- a/views/firstPage.html
+++ b/views/firstPage.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="/css/firstPage.css" />
   <link rel="stylesheet" href="/css/sidebar.css" />
   <link rel="stylesheet" href="/css/weather.css">
+  <link rel="shortcut icon" href="/images/logo.png" type="image/x-icon" />
 </head>
 
 <body>
