--- a/views/manageRequest.html
+++ b/views/manageRequest.html
@@ -10,8 +10,9 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="/firstPage.css" />
-    <link rel="stylesheet" href="/sidebar.css" />
+    <link rel="shortcut icon" href="/images/logo.png" type="image/x-icon" />
+    <link rel="stylesheet" href="/css/firstPage.css" />
+    <link rel="stylesheet" href="/css/sidebar.css" />
     <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
     <style>
       body {
@@ -260,7 +261,7 @@
 
     <!-- Sidebar -->
     <div class="logo" onclick="window.location.href='/'">
-      <img src="/logo.png" alt="Pandemic Response Logo" class="logo-img" />
+      <img src="/images/logo.png" alt="Pandemic Response Logo" class="logo-img" />
     </div>
     <div class="sidebar" id="sidebar">
       <div class="sidebar-links">
@@ -425,7 +426,7 @@
       </div>
     </div>
 
-    <script src="/sidebar.js"></script>
+    <script src="/js/sidebar.js"></script>
     <script>
       let currentRequestId = null;
 
