--- a/views/sign-up.html
+++ b/views/sign-up.html
@@ -10,6 +10,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link rel="shortcut icon" href="/images/logo.png" type="image/x-icon" />
     <style>
       * {
         margin: 0;
