--- a/views/stats.html
+++ b/views/stats.html
@@ -11,8 +11,9 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="/firstPage.css" />
-    <link rel="stylesheet" href="/sidebar.css" />
+    <link rel="shortcut icon" href="/images/logo.png" type="image/x-icon" />
+    <link rel="stylesheet" href="/css/firstPage.css" />
+    <link rel="stylesheet" href="/css/sidebar.css" />
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-zoom@1.2.1/dist/chartjs-plugin-zoom.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
@@ -172,7 +173,7 @@
   <body>
     <!-- Sidebar -->
     <div class="logo" onclick="window.location.href='/'">
-      <img src="/logo.png" alt="Pandemic Response Logo" class="logo-img" />
+      <img src="/images/logo.png" alt="Pandemic Response Logo" class="logo-img" />
     </div>
     <div class="sidebar" id="sidebar">
       <div class="sidebar-links">
@@ -297,8 +298,8 @@
       <button class="close-popup" id="close-popup">Close</button>
     </div>
 
-    <script src="/sidebar.js"></script>
-    <script src="/firstPage.js"></script>
+    <script src="/js/sidebar.js"></script>
+    <script src="/js/firstPage.js"></script>
     <script>
       let healthcareChart, economyChart, predictiveChart, statsDoughnut;
       let pandemicData = {};
