--- a/views/updateProfile.html
+++ b/views/updateProfile.html
@@ -11,8 +11,9 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="/firstPage.css" />
-    <link rel="stylesheet" href="/sidebar.css" />
+    <link rel="shortcut icon" href="/images/logo.png" type="image/x-icon" />
+    <link rel="stylesheet" href="/css/firstPage.css" />
+    <link rel="stylesheet" href="/css/sidebar.css" />
     <style>
       /* Profile-Specific Styles */
       .profile-container {
@@ -263,7 +264,7 @@
   <body>
     <!-- Sidebar (Consistent Across All Pages) -->
     <div class="logo" onclick="window.location.href='/'">
-      <img src="/logo.png" alt="Pandemic Response Logo" class="logo-img" />
+      <img src="/images/logo.png" alt="Pandemic Response Logo" class="logo-img" />
     </div>
     <div class="sidebar" id="sidebar">
       <div class="sidebar-links">
@@ -300,7 +301,7 @@
       </div>
       <div class="user-profile">
         <img
-          src="/default-user.png"
+          src="/images/logohaire.png"
           alt="User Photo"
           id="user-photo"
           class="user-photo"
@@ -325,7 +326,7 @@
         <!-- Left Side: Profile Image -->
         <div class="profile-left">
           <img
-            src="/default-user.png"
+            src="/images/logohaire.png"
             alt="Profile Picture"
             id="profilePic"
             class="profile-pic"
@@ -422,8 +423,8 @@
       </div>
     </div>
 
-    <script src="/firstPage.js"></script>
-    <script src="/sidebar.js"></script>
+    <script src="/js/firstPage.js"></script>
+    <script src="/js/sidebar.js"></script>
     <script>
       // Global variable to store the selected file for the profile image
       let selectedFile = null;
