--- a/views/user-dashboard.html
+++ b/views/user-dashboard.html
@@ -11,13 +11,14 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="/firstPage.css" />
-    <link rel="stylesheet" href="/sidebar.css" />
+    <link rel="shortcut icon" href="/images/logo.png" type="image/x-icon" />
+    <link rel="stylesheet" href="/css/firstPage.css" />
+    <link rel="stylesheet" href="/css/sidebar.css" />
   </head>
   <body>
     <!-- Sidebar (Consistent Across All Pages) -->
     <div class="logo" onclick="window.location.href='/'">
-      <img src="/logo.png" alt="Pandemic Response Logo" class="logo-img" />
+      <img src="/images/logo.png" alt="Pandemic Response Logo" class="logo-img" />
     </div>
     <div class="sidebar" id="sidebar">
       <div class="sidebar-links">
@@ -333,7 +334,7 @@
     </div>
 
     <script src="https://unpkg.com/scrollreveal"></script>
-    <script src="/sidebar.js"></script>
-    <script src="/firstPage.js"></script>
+    <script src="/js/sidebar.js"></script>
+    <script src="/js/firstPage.js"></script>
   </body>
 </html>
