--- a/views/map.html
+++ b/views/map.html
@@ -399,6 +399,7 @@
     </div>
 
     <!-- Popup -->
+    <div class="grey"></div>
     <div class="popup" id="popup">
       <span class="popup-text" id="popup-text"></span>
       <button class="close-popup" id="close-popup">Close</button>
