--- a/views/pandamic.html
+++ b/views/pandamic.html
@@ -451,6 +451,13 @@
           width: 90%;
           right: 5%;
         }
+        .guide-item{
+          height: fit-content;
+          flex: 1 1 100px;
+        }
+        .game-card{
+          flex: 1 1 100px;
+        }
       }
     </style>
   </head>
@@ -664,6 +671,7 @@
     </button>
 
     <!-- Popup -->
+    <div class="grey"></div>
     <div class="popup" id="popup">
       <span class="popup-text" id="popup-text"></span>
       <button class="close-popup" id="close-popup">Close</button>
