--- a/views/updateProfile.html
+++ b/views/updateProfile.html
@@ -245,8 +245,13 @@
         .profile-container {
           flex-direction: column;
           padding: 20px;
+          margin-left: 0;
         }
-
+        .main-content{
+          display: flex;
+          align-items: center;
+          justify-content: center;
+        }
         .profile-left,
         .profile-right {
           max-width: 100%;
@@ -415,6 +420,7 @@
     </main>
 
     <!-- Badge Popup -->
+    <div class="grey"></div>
     <div class="popup" id="badgePopup">
       <div class="popup-content">
         <h3 id="badgeTitle">Badge Title</h3>
