--- a/views/stats.html
+++ b/views/stats.html
@@ -293,6 +293,7 @@
     </main>
 
     <!-- Popup -->
+    <div class="grey"></div>
     <div class="popup" id="popup">
       <span class="popup-text" id="popup-text"></span>
       <button class="close-popup" id="close-popup">Close</button>
