--- a/public/css/sidebar.css
+++ b/public/css/sidebar.css
@@ -137,7 +137,7 @@
 
 .mobile-hamburger {
     font-size: 2rem;
-    color: #052020;
+    color: #00ffff;
     transition: transform 0.3s ease;
 }
 
@@ -157,9 +157,5 @@
 
     .mobile-toggle {
         display: block;
-    }
-    .logo{
-        top: 5px;
-        left: 0px;
     }
 }
