--- a/views/updateProfile.html
+++ b/views/updateProfile.html
@@ -415,6 +415,7 @@
     </main>
 
     <!-- Badge Popup -->
+    <div class="grey"></div>
     <div class="popup" id="badgePopup">
       <div class="popup-content">
         <h3 id="badgeTitle">Badge Title</h3>
