--- a/views/pandamic.html
+++ b/views/pandamic.html
@@ -664,6 +664,7 @@
     </button>
 
     <!-- Popup -->
+    <div class="grey"></div>
     <div class="popup" id="popup">
       <span class="popup-text" id="popup-text"></span>
       <button class="close-popup" id="close-popup">Close</button>
