--- a/public/css/sidebar.css
+++ b/public/css/sidebar.css
@@ -137,7 +137,7 @@
 
 .mobile-hamburger {
     font-size: 2rem;
-    color: #00ffff;
+    color: #052020;
     transition: transform 0.3s ease;
 }
 
