--- a/views/pandamic.html
+++ b/views/pandamic.html
@@ -491,6 +491,9 @@
         <a href="/user-dashboard" class="sidebar-link"
           ><i class="fa-solid fa-user"></i> User Dashboard</a
         >
+        <a href="/alerts" class="sidebar-link"
+        ><i class="fa-solid fa-alert"></i> Alerts</a
+      >
         <a href="/profile" class="sidebar-link"
           ><i class="fa-solid fa-id-card"></i> Profile</a
         >
